# autodev

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  evaluation_results.md
src/autodev/: __init__.py  __main__.py  cli.py  config.py
src/autodev/agent/: core.py  modes.py  prompts.py  state.py
src/autodev/evaluation/: benchmark.py
src/autodev/github/: issues.py  pull_requests.py
src/autodev/llm/: client.py
src/autodev/sandbox/: docker.py  workspace.py
src/autodev/tools/: codebase.py  constants.py  file_ops.py  git_ops.py  grep.py  registry.py  shell.py  toolkit.py
tests/: test_agent.py  test_benchmark.py  test_sandbox.py
